--- a/nine.html
+++ b/nine.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>더블 액션: 신뢰의 도약 || 답안</title>
+    <title>더블 액션: 신뢰의 도약 || 나인 답안</title>
   </head>
-  <body style="word-break: keep-all">
-    <a href="./seven.html">세븐의 답지</a>
-    <a href="./nine.html">나인의 답지</a>
-  </body>
+  <body></body>
 </html>
