complete nine answers

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <title>더블 액션: 신뢰의 도약 || 답안</title>
   </head>
   <body style="word-break: keep-all">
-    <a href="./seven.html">세븐의 답지</a>
-    <a href="./nine.html">나인의 답지</a>
+    <button type="button" id="show-seven-button">세븐의 답지</button>
+    <button type="button" id="show-nine-button">나인의 답지</button>
+    <section
+      style="display: grid; grid-template-columns: repeat(3, 1fr)"
+      id="answer-section"
+    ></section>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
